--- a/css/main.css
+++ b/css/main.css
@@ -97,9 +97,8 @@ body {
   gap: 50px;
 }
 
-.header-menu-link {
+.header-menu__link {
   position: relative;
-  /* display: inline-block; */
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -108,10 +107,10 @@ body {
   color: var(--main-text-color);
   transition: color var(--transition-dur-func);
 }
-.header-menu-link:hover, .header-menu-link:focus {
+.header-menu__link:hover, .header-menu__link:focus {
   color: var(--accent-color);
 }
-.header-menu-link:hover::after, .header-menu-link:focus::after {
+.header-menu__link:hover::after, .header-menu__link:focus::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -121,7 +120,7 @@ body {
   border-radius: 2px;
   background-color: var(--accent-color);
 }
-.header-menu-link::after {
+.header-menu__link::after {
   content: "";
   transition: background-color var(--transition-dur-func);
 }
@@ -145,7 +144,7 @@ body {
   gap: 50px;
 }
 
-.contact-link {
+.contact__link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -154,7 +153,7 @@ body {
   align-items: center;
   transition: color var(--transition-dur-func);
 }
-.contact-link:hover, .contact-link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
 }
 
@@ -184,7 +183,7 @@ body {
   background-color: #C4C4C4;
 }
 
-.section-text {
+.main-section__text {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -218,7 +217,7 @@ body {
   background-color: var(--accent-color);
 }
 
-.text-main-about {
+.main-about__text {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -236,11 +235,11 @@ body {
   gap: 30px;
 }
 
-.about-menu-item {
+.about-menu__item {
   width: 270px;
 }
 
-.about-link {
+.about-menu__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -250,19 +249,19 @@ body {
   border-radius: 4px;
 }
 
-.about-icon {
+.about-menu__icon {
   width: 70px;
   height: 70px;
 }
 
-.title-about {
+.about-menu__title {
   line-height: 1.14;
   font-size: 14px;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
 
-.text-about {
+.about-menu__text {
   font-weight: 400;
   line-height: 1.71;
   color: var(--secondary-text-color);
@@ -343,15 +342,15 @@ body {
 .social-list-link:hover, .social-list-link:focus {
   background-color: var(--accent-color);
 }
-.social-list-link:hover .social-list-icon, .social-list-link:focus .social-list-icon {
-  fill: var(--text-color-theme-dark);
-}
 
 .social-list-icon {
   width: 20px;
   height: 20px;
   fill: #AFB1B8;
   transition: fill var(--transition-dur-func);
+}
+.social-list-link:hover .social-list-icon, .social-list-link:focus .social-list-icon {
+  fill: var(--text-color-theme-dark);
 }
 
 .clients-list {
@@ -645,32 +644,30 @@ body {
   position: absolute;
   appearance: none;
 }
+
+.modal-form-own-checkbox {
+  width: 16px;
+  height: 15px;
+  fill: var(--text-color-theme-dark);
+  border: 2px solid var(--main-text-color);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: border-color var(--transition-dur-func), background-color var(--transition-dur-func);
+}
 .modal-form-check:checked + .modal-form-own-checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
-}
-.modal-form-check:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
-  display: block;
 }
 .modal-form-check:hover + .modal-form-own-checkbox, .modal-form-check:focus + .modal-form-own-checkbox {
   box-shadow: 0 0 0 2px var(--accent-color);
 }
 
-.modal-form-own-checkbox {
-  width: 16px;
-  height: 15px;
-  /* padding: 4px 3px 2px 3px; */
-  fill: var(--text-color-theme-dark);
-  border: 2px solid var(--main-text-color);
-  border-radius: 2px;
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-  cursor: pointer;
-  margin-right: 10px;
-  transition: border-color var(--transition-dur-func), background-color var(--transition-dur-func);
-}
-
 .modal-form-own-checkbox-icon {
   display: none;
+}
+.modal-form-check:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
+  display: block;
 }
 
 .modal-form-link-agreement {
