--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -31,9 +31,9 @@
   gap: 50px;
 }
 
-.header-menu-link {
+.header-menu__link {
   position: relative;
-  /* display: inline-block; */
+
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -84,7 +84,7 @@
   margin-left: auto;
   gap: 50px;
 }
-.contact-link {
+.contact__link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
