--- a/sass/layout/_main-section.scss
+++ b/sass/layout/_main-section.scss
@@ -14,7 +14,7 @@
     background-color: #C4C4C4;
 }
 
-.section-text {
+.main-section__text {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
