--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,26 +2,26 @@
     background: #F5F4FA;
 }
 
-.section-title {
+.section__title {
     margin-bottom: 50px;
 }
 
-.team-item {
+.team__item {
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-img {
+.team__img {
     padding-bottom: 30px;
 }
 
-.photo-team {
+.team-photo {
     display: flex;
     gap: 30px;
 }
 
-.name {
+.team-photo__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -29,7 +29,7 @@
     margin-bottom: 10px;
 }
 
-.profession {
+.team-photo__profession {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
