--- a/sass/layout/_working.scss
+++ b/sass/layout/_working.scss
@@ -1,14 +1,14 @@
-.doing {
+.work {
     padding-top: 0;
 }
 
-.section-title {
+.section__title {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
 }
 
-.doing-menu {
+.work-menu {
     display: flex;
     gap: 30px;
     margin-top: 50px;
