header moved to components

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,8 @@
 @import './base/section.scss';
 
 
-@import './layout/header';
+@import './components/header';
+
 @import './layout/main-section.scss';
 @import './layout/advantages';
 @import './layout/working';
