--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,18 @@
   --transition-dur-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+body {
+  background-color: var(--text-color-theme-dark);
+  font-family: var(--first-font);
+  font-size: 14px;
+  color: var(--main-text-color);
+  letter-spacing: 0.03em;
+}
+
+.accent {
+  color: var(--accent-color);
+}
+
 h1,
 h2,
 h3,
@@ -38,18 +50,6 @@ img {
 
 button {
   cursor: pointer;
-}
-
-body {
-  background-color: var(--text-color-theme-dark);
-  font-family: var(--first-font);
-  font-size: 14px;
-  color: var(--main-text-color);
-  letter-spacing: 0.03em;
-}
-
-.accent {
-  color: var(--accent-color);
 }
 
 .container {
@@ -169,218 +169,6 @@ body {
   height: 16px;
   margin-right: 10px;
   fill: currentColor;
-}
-
-.main-section {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/bg-section-1.jpg");
-  max-width: 1600px;
-  margin: 0 auto;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #C4C4C4;
-}
-
-.main-section__text {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--text-color-theme-dark);
-  margin-left: auto;
-  margin-right: auto;
-  Width: 696px;
-  Height: 120px;
-}
-
-.section-btn {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  margin: auto;
-  padding: 10px 32px 10px 32px;
-  margin-top: 30px;
-  border: none;
-  border-radius: 4px;
-  color: var(--text-color-theme-dark);
-  background-color: var(--accent-color);
-}
-.section-btn:hover, .section-btn:focus {
-  background-color: var(--accent-color);
-}
-
-.main-about__text {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.about-menu {
-  display: flex;
-  gap: 30px;
-}
-
-.about-menu__item {
-  width: 270px;
-}
-
-.about-menu__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 120px;
-  margin-bottom: 30px;
-  background: #F5F4FA;
-  border-radius: 4px;
-}
-
-.about-menu__icon {
-  width: 70px;
-  height: 70px;
-}
-
-.about-menu__title {
-  line-height: 1.14;
-  font-size: 14px;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.about-menu__text {
-  font-weight: 400;
-  line-height: 1.71;
-  color: var(--secondary-text-color);
-  width: 270px;
-}
-
-.work {
-  padding-top: 0;
-}
-
-.section__title {
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-}
-
-.work-menu {
-  display: flex;
-  gap: 30px;
-  margin-top: 50px;
-}
-
-.team {
-  background: #F5F4FA;
-}
-
-.section__title {
-  margin-bottom: 50px;
-}
-
-.team__item {
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.team__img {
-  padding-bottom: 30px;
-}
-
-.team-photo {
-  display: flex;
-  gap: 30px;
-}
-
-.team-photo__name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.team-photo__profession {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  margin-bottom: 16px;
-  color: var(--secondary-text-color);
-}
-
-.social-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  padding-bottom: 30px;
-}
-
-.social-list-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  transition: background-color var(--transition-dur-func);
-}
-.social-list-link:hover, .social-list-link:focus {
-  background-color: var(--accent-color);
-}
-
-.social-list-icon {
-  width: 20px;
-  height: 20px;
-  fill: #AFB1B8;
-  transition: fill var(--transition-dur-func);
-}
-.social-list-link:hover .social-list-icon, .social-list-link:focus .social-list-icon {
-  fill: var(--text-color-theme-dark);
-}
-
-.clients-list {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-}
-
-.clients-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  transition: border-color var(--transition-dur-func);
-}
-.clients-link:hover, .clients-link:focus {
-  border-color: var(--accent-color);
-}
-.clients-link:hover .clients-icon, .clients-link:focus .clients-icon {
-  fill: var(--accent-color);
-}
-
-.clients-icon {
-  width: 106px;
-  height: 60px;
-  fill: #AFB1B8;
-  transition: fill var(--transition-dur-func);
 }
 
 .footer {
@@ -693,6 +481,218 @@ body {
 }
 .modal-form-submit:focus {
   background-color: #188CE8;
+}
+
+.main-section {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/bg-section-1.jpg");
+  max-width: 1600px;
+  margin: 0 auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #C4C4C4;
+}
+
+.main-section__title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--text-color-theme-dark);
+  margin-left: auto;
+  margin-right: auto;
+  Width: 696px;
+  Height: 120px;
+}
+
+.section-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  margin: auto;
+  padding: 10px 32px 10px 32px;
+  margin-top: 30px;
+  border: none;
+  border-radius: 4px;
+  color: var(--text-color-theme-dark);
+  background-color: var(--accent-color);
+}
+.section-btn:hover, .section-btn:focus {
+  background-color: var(--accent-color);
+}
+
+.main-about__title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.about-menu {
+  display: flex;
+  gap: 30px;
+}
+
+.about-menu__item {
+  width: 270px;
+}
+
+.about-menu__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #F5F4FA;
+  border-radius: 4px;
+}
+
+.about-menu__icon {
+  width: 70px;
+  height: 70px;
+}
+
+.about-menu__title {
+  line-height: 1.14;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.about-menu__text {
+  font-weight: 400;
+  line-height: 1.71;
+  color: var(--secondary-text-color);
+  width: 270px;
+}
+
+.work {
+  padding-top: 0;
+}
+
+.section__title {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+.work-menu {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+
+.team {
+  background: #F5F4FA;
+}
+
+.section__title {
+  margin-bottom: 50px;
+}
+
+.team__item {
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team__img {
+  padding-bottom: 30px;
+}
+
+.team-photo {
+  display: flex;
+  gap: 30px;
+}
+
+.team-photo__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.team-photo__profession {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-bottom: 16px;
+  color: var(--secondary-text-color);
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
+.social-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  transition: background-color var(--transition-dur-func);
+}
+.social-list-link:hover, .social-list-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-list-icon {
+  width: 20px;
+  height: 20px;
+  fill: #AFB1B8;
+  transition: fill var(--transition-dur-func);
+}
+.social-list-link:hover .social-list-icon, .social-list-link:focus .social-list-icon {
+  fill: var(--text-color-theme-dark);
+}
+
+.clients-list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  transition: border-color var(--transition-dur-func);
+}
+.clients-link:hover, .clients-link:focus {
+  border-color: var(--accent-color);
+}
+.clients-link:hover .clients-icon, .clients-link:focus .clients-icon {
+  fill: var(--accent-color);
+}
+
+.clients-icon {
+  width: 106px;
+  height: 60px;
+  fill: #AFB1B8;
+  transition: fill var(--transition-dur-func);
 }
 
 .portfolio {
