--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,31 +1,11 @@
-h1,
-h2,
-h3,
-h4,
-p {
-    margin-top: 0;
-    margin-bottom: 0;
+body {
+    background-color: var(--text-color-theme-dark);
+    font-family: var(--first-font);
+    font-size: 14px;
+    color: var(--main-text-color);
+    letter-spacing: 0.03em;
 }
 
-ul,
-ol {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-.link {
-    text-decoration: none;
-}
-
-.list {
-    list-style: none;
-}
-
-img {
-    display: block;
-}
-
-button {
-    cursor: pointer;
+.accent {
+    color: var(--accent-color);
 }
