--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,114 +1,145 @@
 .header {
-  padding: 24px 0px;
-  border: 1px solid #ECECEC;
-
-  .container {
-      display: flex;
-      align-items: center;
-      padding-left: 15px;
-      padding-right: 15px;
-  
-    }
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-
-.header-nav, 
-.logo,
-.header-menu,
- .contacts {
-  display: flex;
-  align-items: center;
-}
-.logo {
-  font-family: var(--second-font);
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--main-text-color);
-  margin-right: 93px;
-}
 .header-menu {
-  gap: 50px;
+  display: none;
 }
-
-.header-menu__link {
-  position: relative;
-
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 28px;
-  padding-bottom: 28px;
-  color: var(--main-text-color);
-  transition: color var(--transition-dur-func);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: var(--accent-color);
-    }
-  }
-
-  &::after {
-    content: "";
-    transition: background-color var(--transition-dur-func);
-  }
-}
-
-.current {
-  color: var(--accent-color);
-
- &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: var(--accent-color);
-    }
-}
-
-
 .contacts {
-  margin-left: auto;
-  gap: 50px;
+  display: none;
 }
-.contact__link {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
 
-  color: var(--secondary-text-color);
+.header__container {
   display: flex;
   align-items: center;
-  transition: color var(--transition-dur-func);
-
- &:hover,
-   &:focus {
-      color: var(--accent-color);
-    }
+  justify-content: space-between;
 }
 
-.mail-logo {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  fill: currentColor;
+.open-mobile-menu-btn {
+    line-height: 0;
+  border: none;
+  background-color:transparent;
+  padding: 0;
 }
-.tel-logo {
-  width: 10px;
-    height: 16px;
-    margin-right: 10px;
-    fill: currentColor;
+.open-mobile-menu-btn__icon {
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+
 }
+
+// .header {
+//   padding: 24px 0px;
+//   border: 1px solid #ECECEC;
+
+//   .container {
+//       display: flex;
+//       align-items: center;
+//       padding-left: 15px;
+//       padding-right: 15px;
+  
+//     }
+// }
+
+
+// .header-nav, 
+// .logo,
+// .header-menu,
+//  .contacts {
+//   display: flex;
+//   align-items: center;
+// }
+// .logo {
+//   font-family: var(--second-font);
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 1.19;
+//   color: var(--main-text-color);
+//   margin-right: 93px;
+// }
+// .header-menu {
+//   gap: 50px;
+// }
+
+// .header-menu__link {
+//   position: relative;
+
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding-top: 28px;
+//   padding-bottom: 28px;
+//   color: var(--main-text-color);
+//   transition: color var(--transition-dur-func);
+
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+
+//     &::after {
+//       content: "";
+//       position: absolute;
+//       bottom: 0;
+//       left: 0;
+//       width: 100%;
+//       height: 4px;
+//       border-radius: 2px;
+//       background-color: var(--accent-color);
+//     }
+//   }
+
+//   &::after {
+//     content: "";
+//     transition: background-color var(--transition-dur-func);
+//   }
+// }
+
+// .current {
+//   color: var(--accent-color);
+
+//  &::after {
+//       content: "";
+//       position: absolute;
+//       bottom: 0;
+//       left: 0;
+//       width: 100%;
+//       height: 4px;
+//       border-radius: 2px;
+//       background-color: var(--accent-color);
+//     }
+// }
+
+
+// .contacts {
+//   margin-left: auto;
+//   gap: 50px;
+// }
+// .contact__link {
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+
+//   color: var(--secondary-text-color);
+//   display: flex;
+//   align-items: center;
+//   transition: color var(--transition-dur-func);
+
+//  &:hover,
+//    &:focus {
+//       color: var(--accent-color);
+//     }
+// }
+
+// .mail-logo {
+//   width: 16px;
+//   height: 12px;
+//   margin-right: 10px;
+//   fill: currentColor;
+// }
+// .tel-logo {
+//   width: 10px;
+//     height: 16px;
+//     margin-right: 10px;
+//     fill: currentColor;
+// }
