--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/container';
 @import './components/section';
 @import './components/header';
+@import './components/mobile-menu';
 @import './components/footer';
 @import './components/backdrop';
 @import './components/modal-window';
